# fakerest-test

./: .cproject  .project  Brightsign.cpp  CMakeLists.txt  README.md  RestAPIHandler.cpp  RestAPIHandler.hpp  brightsign.cpp  config.h.in
bsdjsonparser/: CMakeLists.txt
bsdjsonparser/include/: BSDAverageFriendCount.hpp  BSDAverageUserAge.hpp  BSDJSONParserBase.hpp  BSDMostCommonFirstName.hpp  BSDMostCommonHobby.hpp  BSDUserWithBiggestFriendCount.hpp  config.h
bsdjsonparser/src/: BSDAverageFriendCount.cpp  BSDAverageUserAge.cpp  BSDJSONParserBase.cpp  BSDMostCommonFirstName.cpp  BSDMostCommonHobby.cpp  BSDUserWithBiggestFriendCount.cpp
tests/: CMakeLists.txt  local_json_file_tester.cpp
